# facemask-detector

./: .gitignore  README.md  pyproject.toml  train_mask_detector.py
facejs/: package.json
facemask_detector/: detect_mask_video.py
tests/: test_facemask_detector.py
trained_models/: shoe_classifier.pb
