[tool.poetry]
name = "facemask-detector"
version = "0.1.0"
description = ""
authors = ["sollimann <kristoffer.solberg@cognite.com>"]

[tool.poetry.scripts]
train = "train_mask_detector:main"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^1.15.2"
keras = "2.3.1"
numpy = "1.18.2"
opencv-python = "^4.2.0"
matplotlib = "3.2.1"
argparse = "1.1"
scipy = "1.4.1"
sklearn = "^0.0"
imutils = "^0.5.4"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
